--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
   "name": "pick",
   "version": "0.1.0",
+  "author": "John Aldrich Bernardo",
+  "description": "Bite-size Javascript Library",
+  "license": "MIT",
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-contrib-concat": "^1.0.1",
     "grunt-contrib-jshint": "^1.1.0",
     "grunt-contrib-uglify": "^0.5.1",
-    "grunt-contrib-watch": "^1.0.0"
+    "grunt-contrib-watch": "^1.0.0",
+    "grunt-replace": "^1.0.1"
   }
 }
